--- a/focused.html
+++ b/focused.html
@@ -140,14 +140,14 @@ offer this “simplification” support to learners in other ways we didn't envi
 The <a href="http://lak.linkededucation.org">LAK Dataset</a>: A large corpus of research literature related to Learning Analytics is publicly available in machine-readable formats. This dataset was curated and launched by researchers from the Society for Learning Analytics Research (SoLAR), the LinkedUp project, and the Educational Technology Institute of the National Research Council of Italy (CNR-ITD). Content from this dataset could also be considered good candidates for material that could be Simplified. For more information about the content, check out the LinkedUp Blog. </li><li>
 For the competition, <a href="http://www.elsevier.com">Elsevier</a> will be showcasing data and content around the interdisciplenary topic of water use and water footprinting, which measures how individuals and municipalities, companies and industries, use water resources. The field touches on many areas including geography, hydrology, sustainability, water quality, policy, and business. For the Simplificator, it would be interesting to see if the content and data in this collection could be Simplified. In particular, we believe this will provide opportunities for cross-discipline interpretation of texts and data. </li></h3></ul>
 <h2>What would make my submission a good one?</h2>
-<p><h3>Within, LinkedUp we are looking for 6 criteria a good submission should contribute to: 1. Educational Innovation, 2. Usability, 3. Data, 4. Performance, 5. Legal Aspects, 6. Audience.  Ideal submissions would score high on all six elements of our evaluation framework. Below you can find a short description how these criteria are applied for the Focus Task Simplificator:</h3></p>
+<p><h3>Within, LinkedUp we are looking for 6 criteria a good submission should contribute to: 1. Educational Innovation, 2. Usability, 3. Data, 4. Performance, 5. Legal Aspects, 6. Audience.  Ideal submissions would score high on all six elements of our evaluation framework. Below you can find a short description how these criteria are applied for the Focused Task Simplificator:</h3></p>
 			  <p><h3><ol>
 			  <li><strong>Educational Innovation</strong><br />
 Your tool should make innovative use of current technologies or even showcase a new technology for educational purposes. The approach should make learning more effective (better understanding) and / or more efficient (lesser time and efforts) than traditional approaches of understanding complex texts.</li>
 			  <li><strong>Usability</strong><br />
 Your tool should have an attractive user interface and is easy to use. </li>
 			  <li><strong>Data</strong><br />
-The submission should use at least one dataset; using web data and providing number of resources. Web data does not necessary available on the Web, but using standard Web protocols like REST or SOAP services. The application should use at least two other datasets for enriching the resource. </li>
+The submission should use at least one dataset; using web data and providing number of resources. Web data does not necessarily have to be publicly available on the Web, but using standard Web protocols like REST or SOAP services. The application should use at least two other datasets for enriching the resource. </li>
 			  <li><strong>Performance</strong><br />
 The submission should run stable and has a good response time. Where possible, a submission would be portable. That is, able to be reused with new datasets with a minimal amount adjustments to the application.</li>
 			  <li><strong>Legal aspects</strong><br />
@@ -203,14 +203,14 @@ or provide recommendation and guidance in any other meaningful and supportive wa
 <ul><h3><li>The tool should use multiple sources to suggest classes or resources (for example, recommend one course from Coursera, one from another MOOC, and readings from reading list) </h3></li></ul>
 
 <h2>What would make my submission a good one?</h2>
-<p><h3>Within LinkedUp we are looking for 6 criteria a good submission should contribute to: 1. Educational Innovation, 2. Usability, 3. Data, 4. Performance, 5. Legal aspects, 6. Audience.  Ideal submissions would score high on all six elements of our evaluation framework. Below you can find a short description how these criteria are applied for the Focus Task: PathFinder:</h3></p>
+<p><h3>Within LinkedUp we are looking for 6 criteria a good submission should contribute to: 1. Educational Innovation, 2. Usability, 3. Data, 4. Performance, 5. Legal aspects, 6. Audience.  Ideal submissions would score high on all six elements of our evaluation framework. Below you can find a short description how these criteria are applied for the Focused Task: PathFinder:</h3></p>
 			  <p><h3><ol>
 			  <li><strong>Educational Innovation</strong><br />
 Your tool should make innovative use of current technologies or even showcase a new technology providing the users with learning opportunities that match  their individual profiles with educational resources. This would lead to higher learning achievements, increased satisfaction from learning and less time and effort.</li>
 			  <li><strong>Usability</strong><br />
 We are not necessarily looking at a polished application in terms of user interface and attractiveness, but the user interface should be easy to use.</li>
 			  <li><strong>Data</strong><br />
-The submission should use at least one dataset; using web data and providing number of resources. Web data does not necessary have to be available on the Web, but we do expect the application to use standard Web protocols like REST or SOAP services.</li>
+The submission should use at least one dataset; using web data and providing number of resources. Web data does not necessarily have to be publicly available on the Web, but we do expect the application to use standard Web protocols like REST or SOAP services.</li>
 			  <li><strong>Performance</strong><br />
 The submission should run stable and has a good response time. The tool should scale with the current increase in the number of Web Data-reachable learning opportunities.</li>
 			  <li><strong>Legal aspects</strong><br />
