--- a/focused.html
+++ b/focused.html
@@ -76,7 +76,7 @@
       <li><a href="#pathfinder"><i>Pathfinder</i></a></li>
   <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
 		                         <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
-      </ul>
+        <li><a href="http://linkedup-project.eu">LinkedUp Project</a></li> </ul>
 	</div>
       
       <div class="content-shifter">
