--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -78,6 +78,7 @@
 <li><a href="#mismuseos"><i>MisMuseos</i></a></li>
 <li><a href="#local"><i>Local Learning</i></a></li>
               <li><a href="veni.html">Veni Competition</a></li>
+                 <li><a href="http://linkedup-project.eu">LinkedUp Project</a></li>
 
       </ul>
 	</div>
