--- a/usecases.html
+++ b/usecases.html
@@ -77,6 +77,7 @@
                 <li><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting Employees' =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#apps">App ideas =></a></li>
                               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
+                                 <li><a href="http://linkedup-project.eu">LinkedUp Project</a></li>
       </ul>
 	</div>
       
