--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <li>Notifications and nominations: 28 March 2014</li>
 <li>Presentations and award ceremony at ESWC 2014 (25-29 May 2014)</li></ul></h3>
             <p><h3>We're inviting you to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes. You can submit your Web application, App, analysis toolkit, documented API or any other tool that connects, exploits or analyses open or linked data and that addresses real educational needs. Your tool still may contain some bugs, as long as it has a stable set of features and you have some proof that it can be deployed on a realistic scale. </h3></p>
-
+<p><h3>A webinar introducing the Vidi Competition recently took place and a <a href="https://webconf.vc.dfn.de/p98uj84eqra/">recording can be watched online</a>.</h3></p>
 <p><h3>We have compiled a <a target="_blank" href="http://data.linkededucation.org/linkedup/catalog/">catalogue of data sets</a> to get you started. </h3></p>
 			<p><h3>The idea is to mash up the vast amount of material and data on the internet that can be used in education, ranging from course data, lecture slides, and online courses to Wikipedia articles and YouTube videos. </h3></p>
 		<p><h3>You might design a tool for combining datasets and visualising them in interesting new ways, or perhaps develop a search engine that combines search results from different libraries. Please see our <a href="http://linkedup-challenge.org/usecases-vidi.html">use cases</a> and the <a href="http://linkedup-challenge.org/veni.html">Veni submissions</a>
