--- a/focused.html
+++ b/focused.html
@@ -102,7 +102,7 @@
 <div class="headerblock"><a href="#simplificator"><img src="images/simpl_logo.png" width="200px" height="200px" /></a><br />
 <h3><a href="#simplificator">Simplificator</a> calls for applications easing access to complex information by summarizing them in a simpler form.</h3></div>
 <div class="headerblock"><a href="#pathfinder"><img src="images/path_logo.png" width="200px" height="200px" /></a><br />
-<h3><a href="#pathfinder">Pathfinder</a> calls for applications easing access to recommendations and guidance when chosing appropriate curriculum of courses and related resources.</h3></div>
+<h3><a href="#pathfinder">Pathfinder</a> calls for applications easing access to recommendations and guidance when choosing appropriate curriculum of courses and related resources.</h3></div>
 </div>
 		  <!-- .block -->
 
