--- a/index.html
+++ b/index.html
@@ -238,23 +238,44 @@
 			  </ul>
 			  <br />
 			  <p>Additional reviewers are:</p>
-			  <ul>
-				<li><a target="_blank" href="http://dgasevic.athabascau.ca/">Dragan Gasevic</a>, Athabasca University, Canada</li>
-				<li><a target="_blank" href="http://people.epfl.ch/denis.gillet/bio?lang=en&cvlang=en">Denis Gillet</a>, EPFL, Switzerland</li>
-				<li><a target="_blank" href="http://www.marcokalz.de">Marco Kalz</a>, CELSTEC, Open University, Netherlands</li>
-				<li><a target="_blank" href="http://daviniahl.wordpress.com/">Davinia Hernández-Leo</a>, UPF, Spain</li>
-				<li><a target="_blank" href="http://sydney.academia.edu/AbelardoPardo">Abelardo Pardo</a>, University of Sydney, Australia</li>
-				<li><a target="_blank" href="http://www.cc.uah.es/msicilia/">Miguel-Angel Sicilia</a>, <a target="_blank" href="http://www.uah.es">University of Alcalá</a>, Spain</li>
-				<li><a target="_blank" href="http://kmi.open.ac.uk/people/member/fridolin-wild">Fridolin Wild</a>, KMI, Open University, UK</li>
-				<li><a target="_blank" href="http://kti.tugraz.at/about-kti/team/lindstaedt/">Stefanie Lindstaedt</a>, TU Graz, Austria</li>
-				<li><a target="_blank" href="https://twitter.com/jakeberger">Jake Berger</a>, BBC, UK</li>
-				<li><a target="_blank" href="http://www.wis.ewi.tudelft.nl/houben/">Geert-Jan Houben</a>, TU Delft, Netherlands</li>
-				<li><a target="_blank" href="http://etsii.uah.es/doctorado/Leonardo.html">Leonardo Lezcano</a>, CELSTEC, Open University, Netherlands</li>
-				<li><a target="_blank" href="http://www.few.vu.nl/~cgueret/">Christophe Guéret</a>, Data Archiving and Networked Services (DANS), Netherlands</li>			  
-				<li><a target="_blank" href="http://okfn.org/about/team/#Jonathan_Gray_8212_Director_of_Policy_and_Ideas">Jonathan Gray</a>, Open Knowledge Foundation, United Kingdom</li>			  
-				<li><a target="_blank" href="https://adenu.ia.uned.es/web/en/members/adenu_staff_members/ocsantos">Olga C. Santos</a>, UNED, Spain</li>			  
-				<li><a target="_blank" href="http://science20.wordpress.com/visualizations/">Peter Kraker</a>, Know Center, Graz Austria</li>			  
-    			</ul>
+			  <ul><li>Jesus G. Boticario, UNED, Spain
+</li><li>Dirk Börner, Open Universiteit, the Netherlands
+</li><li>Cristian Cechinel, UFPel - Federal University of Pelotas, Brazil
+</li><li>Adam Cooper, CETIS, University of Bolton, UK
+</li><li>Philippe Cudré-Mauroux, U. of Fribourg, Switzerland
+</li><li>Mathieu D'Aquin, KMI, Open University, UK
+</li><li>Stefan Dietze, L3S Research Center, Germany
+</li><li>Hendrik Drachsler, Open Universiteit, the Netherlands
+</li><li>Soude Fazeli, Open Universiteit, the Netherlands
+</li><li>Franca Giannini, Institute for the Applied Mathematics and Information 
+Technologies CNR, Italy
+</li><li>Denis Gillet, Swiss Federal Institute of Technology in Lausanne (EPFL), 
+Switzerland
+</li><li>Wolfgang Greller, Vienna University of Education, Austria
+</li><li>Marieke Guy, Open Knowledge Foundation, UK
+</li><li>Christophe Guéret, Data Archiving and Networked Services (DANS), the 
+Netherlands
+</li><li>Eelco Herder, L3S Research Center, Germany
+</li><li>Tore Hoel, Høgskolen i Oslo og Akershus, Norway
+</li><li>Geert-Jan Houben, TU Delft, the Netherlands
+</li><li>Dirk Ifenthaler, Open Universities Australia
+</li><li>Wilbert Kraan, CETIS. UK
+</li><li>Peter Kraker, Know-Center, Austria
+</li><li>Felix Mödritscher, Vienna University of Economics and Business, Austria
+</li><li>Katja Niemann, Fraunhofer Gesellschaft, Germany
+</li><li>Eric Ras, Public Research Centre Henri Tudor, Luxembourg
+</li><li>Christoph Rensing, Technische Universität Darmstadt, Germany
+</li><li>Olga C. Santos, aDeNu Research Group (UNED), Spain
+</li><li>Maren Scheffel, Fraunhofer Institute for Applied Information Technology 
+FIT, Germany
+</li><li>Owen Stephens, Owen Stephens Consulting, UK
+</li><li>Davide Taibi, Italian National Research Council
+</li><li>Tiffany Tang, Kean University
+</li><li>Christoph Trattner, KMI, TU-Graz, Austria
+</li><li>Raphaël Troncy, EURECOM
+</li><li>Ruben Verborgh, Ghent University - iMinds - Multimedia Lab, Belgium</li></ul>
+
+				
 			  <p>Submissions which receive the highest review ratings with be invited to present at the <a href=” http://2014.eswc-conferences.org”>European Semantic Web Conference</a> (25-29, May 2014) in Crete, Greece.
 </h3></p>
 
