--- a/focused.html
+++ b/focused.html
@@ -251,7 +251,8 @@ The tool should clearly indicate what is the target group and why it has been se
 			<br clear="all"/>
 			<br clear="all"/>
 			<h4 style="text-align:right"><em>The project partners on the LinkedUp Challenge.</em></h4>
-          </div>
+			<h4>This project has received funding from the European Union's Seventh Framework Programme for research, technological development and demonstration under grant agreement no 317620.</h4>
+          </div
           <div class="col-6">
             <p>The LinkedUp Challenge is organised by the <a href="http://www.linkedup-project.eu">LinkedUp Project</a></p>
           </div><!-- .col-6 -->
