--- a/focused.html
+++ b/focused.html
@@ -238,7 +238,7 @@ The tool should clearly indicate what is the target group and why it has been se
 		  
 	
 
-        <div class="footer">
+       <div class="footer">
 		  <div align="center"><img align="center" src="images/edu_photo.jpg" /></div>
           <div id="organisers" name="organisers" class="block">
 		    <a href="http://www.lattanziogroup.eu/en/learning.html" target="_blank"><img src="http://linkedup-project.eu/files/2012/07/logo_lattanzio.gif" height="45px" style="padding:10px" align="right"/></a>
@@ -251,12 +251,12 @@ The tool should clearly indicate what is the target group and why it has been se
 			<br clear="all"/>
 			<br clear="all"/>
 			<h4 style="text-align:right"><em>The project partners on the LinkedUp Challenge.</em></h4>
-		
-          </div
-         
-        <div class="col-6">
+          </div>
+          <div class="col-6">
             <p>The LinkedUp Challenge is organised by the <a href="http://www.linkedup-project.eu">LinkedUp Project</a></p>
-          </div><!-- .col-6 -->
+            <p>This project has received funding from the European Union’s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 317620. </p>
+
+        </div><!-- .col-6 -->
           <div class="col-3 last">
             <p>Design by 
               <a href="http://twitter.com/markdunkley" title="">Mark</a> mangled by <a href="http://twitter.com/daeaves">Dave</a>, then by <a href="http://twitter.com/ddie">Daniel</a> and <a href="http://twitter.com/jwyg">Jonathan</a> and Sam and <a href="http://twitter.com/sandervdwaal" target="_blank">Sander</a>. Images from <a href="http://thenounproject.com/noun/education" target="_blank">Education</a> designed by <a href="http://thenounproject.com/tricktrou" target="_blank">Patrick Trouvé</a> from The Noun Project and <a href="http://twitter.com/#!/mintcanary">Sam Smith</a>.</p>
@@ -267,5 +267,7 @@ The tool should clearly indicate what is the target group and why it has been se
   </div><!-- #wrapper -->
 </body>
 </html>
+
+
 
 
