--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -279,7 +279,9 @@ Let''s assume the GPS and mobile signals are strong throughout the day so we kno
           </div>
           <div class="col-6">
             <p>The LinkedUp Challenge is organised by the <a href="http://www.linkedup-project.eu">LinkedUp Project</a></p>
-          </div><!-- .col-6 -->
+            <p>This project has received funding from the European Union’s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 317620. </p>
+
+        </div><!-- .col-6 -->
           <div class="col-3 last">
             <p>Design by 
               <a href="http://twitter.com/markdunkley" title="">Mark</a> mangled by <a href="http://twitter.com/daeaves">Dave</a>, then by <a href="http://twitter.com/ddie">Daniel</a> and <a href="http://twitter.com/jwyg">Jonathan</a> and Sam and <a href="http://twitter.com/sandervdwaal" target="_blank">Sander</a>. Images from <a href="http://thenounproject.com/noun/education" target="_blank">Education</a> designed by <a href="http://thenounproject.com/tricktrou" target="_blank">Patrick Trouvé</a> from The Noun Project and <a href="http://twitter.com/#!/mintcanary">Sam Smith</a>.</p>
@@ -290,4 +292,8 @@ Let''s assume the GPS and mobile signals are strong throughout the day so we kno
   </div><!-- #wrapper -->
 </body>
 </html>
+
+
+
+
 
