--- a/usecases.html
+++ b/usecases.html
@@ -303,7 +303,7 @@
                           <p><h3>The visualization and exploration tool <a target="_blank" href="http://www.uzrok.com/paperista/">Paperista</a> presents topics of publications in the form of <strong>bubble and line charts</strong>. The tool provides multiple views, thus allowing users to observe and interact with topics, understand their evolution and relationships over time, and compare data originating from different research fields (i.e., LA and EDM).</h3></p>
                         </div>
 
-        <div class="footer">
+       <div class="footer">
 		  <div align="center"><img align="center" src="images/edu_photo.jpg" /></div>
           <div id="organisers" name="organisers" class="block">
 		    <a href="http://www.lattanziogroup.eu/en/learning.html" target="_blank"><img src="http://linkedup-project.eu/files/2012/07/logo_lattanzio.gif" height="45px" style="padding:10px" align="right"/></a>
@@ -319,7 +319,9 @@
           </div>
           <div class="col-6">
             <p>The LinkedUp Challenge is organised by the <a href="http://www.linkedup-project.eu">LinkedUp Project</a></p>
-          </div><!-- .col-6 -->
+            <p>This project has received funding from the European Union’s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 317620. </p>
+
+        </div><!-- .col-6 -->
           <div class="col-3 last">
             <p>Design by 
               <a href="http://twitter.com/markdunkley" title="">Mark</a> mangled by <a href="http://twitter.com/daeaves">Dave</a>, then by <a href="http://twitter.com/ddie">Daniel</a> and <a href="http://twitter.com/jwyg">Jonathan</a> and Sam and <a href="http://twitter.com/sandervdwaal" target="_blank">Sander</a>. Images from <a href="http://thenounproject.com/noun/education" target="_blank">Education</a> designed by <a href="http://thenounproject.com/tricktrou" target="_blank">Patrick Trouvé</a> from The Noun Project and <a href="http://twitter.com/#!/mintcanary">Sam Smith</a>.</p>
@@ -330,3 +332,8 @@
   </div><!-- #wrapper -->
 </body>
 </html>
+
+
+
+
+
