--- a/veni.html
+++ b/veni.html
@@ -100,7 +100,10 @@
         <div id="what" name="what" class="block">
             <p><h3>The Veni Competition ran between late May and late June 2013. People were invited to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes.</h3><br />
 <h3>We received 22 valid entries. The abstracts are given below. </h3><br />
-<h3>All entries are now being reviewed by the evaluation committee, led by the <a href=”http://linkedup-challenge.org/#reviewpanel”>LinkedUp advisory board</a>. The advisory board will create a shortlist by 16 August 2013. Those shortlisted will be invited to <a href=http://okcon.org>OKCon</a> in Geneva to take part in the LinkedUp Award Ceremony on Tuesday 17 September where first, second, and third prizes will be awarded. There will also be a prize awarded for the ‘people’s choice’.
+<h3>The entries were reviewed by the evaluation committee, led by the <a href=”http://linkedup-challenge.org/#reviewpanel”>LinkedUp advisory board</a>. The advisory board will created shortlist as indicated below. This shortlisted were invited to <a href=http://okcon.org>OKCon</a> in Geneva to take part in the LinkedUp Award Ceremony on Tuesday 17 September where first, second, and third prizes were be awarded. 
+
+</h3>
+<h3>First prize was awardeded to <a href="http://linkedup-challenge.org/veni.html#polimedia">Polimedia</a>, second prize was awarded to <a href="http://linkedup-challenge.org/veni.html#globetown">Globe-town</a> and third prize was awarded to <a href="http://linkedup-challenge.org/veni.html#weshare">We-share</a>. We-share also won the People's Choice prize.
 </h3>
             <br/><br/>
 			 
