--- a/vidi.html
+++ b/vidi.html
@@ -248,7 +248,7 @@ SledgeHammer is a component of OpenDataForge, a collection of desktop and cloud 
 TuvaLabs transforms open data into opportunities for meaningful teaching and learning in the classroom, using it can be a lever to bring neighborhoods and communities closer together through education. Teachers across grades and subjects implement lessons, activities, investigations, and projects that enable their students to explore real data on the TuvaLabs platform. We leverage high quality open data sources to curate datasets that teachers and students find meaningful and for teaching and learning in the classroom. At TuvaLabs, we envision a world in which students are empowered with the skills and tools to address tomorrow's environmental, economic, and societal challenges through open data.
 </h3></p>
 
-<h4 style="text-align:right"><em>Demo: <a href="https://www.tuvalabs.com">https://www.tuvalabs.com/a></em></h4>
+<h4 style="text-align:right"><em>Demo: <a href="https://www.tuvalabs.com">https://www.tuvalabs.com</a></em></h4>
 
 </div>
 
