--- a/vidi.html
+++ b/vidi.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="js/thickbox.js"></script>
 <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 
-  <title>LinkedUp Challenge: Veni Competition Submissions</title>
+  <title>LinkedUp Challenge: Vidi Competition Submissions</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
   <script src="js/cufon.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/comicsans.js" type="text/javascript" charset="utf-8"></script>
@@ -108,28 +108,21 @@
          <div id="abstracts" name="abstracts" class="block">         
           <h2>Abstracts</h2>
           
-<ul><li><a href="#course">Course Finder</a></li><li>
-<a href="#dataconf">DataConf: Enriching conference publications with a mobile mashup application</a> <b>SHORTLISTED</b></li><li>
-<a href="#drhoo">Dr Hoo</a></li><li>
-<a href="#digitalplanet">Enrichment of Young Digital Planet's biology lessons</a></li><li>
-<a href="#favsyn">FavSync - Collect bookmarks together</a></li><li>
-<a href="#globetown">Globe-Town: open data for sustainable development education</a> <b>SHORTLISTED - 2nd PRIZE</b></li><li>
-<a href="#knownodes">Knownodes - A collaborative project to explore, create and define links between online resources and ideas</a> <b>SHORTLISTED</b></li> <li>
-<a href="#learner">Learner Journey Navigation System</a></li><li>
-<a href="#mooccounselor">LinkedIn MOOCs counselor</a></li><li>
-<a href="#melod">MELOD: Mobile Environment for learning with Linked Open Data</a></li><li>
-<a href="#mismuseos">Mismuseos.net: Art After Technology. Putting cultural data to work in a Linked Data platform</a> <b>SHORTLISTED</b></li> <li>
-<a href="#moocrank">moocrank: recommendation of MOOCs based on learning outcomes</a></li><li>
-<a href="#neurocloud">Neuro-Cloud Free Textbook Project</a></li><li>
-<a href="#open">Open LInked Education Data</a></li><li>
-<a href="#onemillion">One Million Museum Moments</a></li><li>
-<a href="#polimedia">PoliMedia - Improving the Analyses of Radio & Newspaper coverage of Political Debates</a> <b>SHORTLISTED - 1st PRIZE</b></li> <li>
-<a href="#rethink">REthink, REassure, RElook, REsee, REmember, REdiscover. This is simple. This is ReCredible</a> <b>SHORTLISTED</b></li><li>
-<a href="#socialvle">Social VLE With Rich Structure Learning Data Using Semantic CMS</a></li><li>
-<a href="#suggestme">Suggest me content for further reading and learning</a></li><li>
-<a href="#weshare">We-Share: a social annotation application that publishes and retrieves information about educational ICT tools from the Web of Data</a> <b>SHORTLISTED  - 3rd PRIZE</b> </li><li>
-<a href="#wikipedia">WIkipedia data linker</a></li><li>
-<a href="#yourhistory">yourHistory: Personalising Historic Events</a> <b>SHORTLISTED</b></li></ul>
+<ul><li><a href="#agris">AGRIS – exploiting bibliographic records to create rich Linked Open Data page</a></li><li>
+<a href="#dictionary">NewDictionary</a></li><li>
+<a href="#konnektid">Konnektid - Social Learning Anytime, Anywhere</a></li><li>
+<a href="#labour">Visualization of Labour Conflicts in the Netherlands for last 700 years</a></li><li>
+<a href="#opencatalog">Cultural Heritage Open Catalog</a></li><li>
+<a href="#rhizi">Rhizi.net</a></li><li>
+<a href="#sledgehammer">"OpenDataForge SledgeHammer" - An Open Data Enabling Tool</li> <li>
+<a href="#solvonauts">Solvonauts : an open educational search engine</a></li><li>
+<a href="#tuvalabs">TuvaLabs - Data Literacy Skills for a Brighter Future</a></li><li>
+<a href="#DBLPXplorer">DBLPXplorer: Interactive Graphical Interfaces for the Computer Science Bibliography</a></li><li>
+<a href="#elars">ELARS: E-Learning Activities Recommender System</a></li> <li>
+<a href="#letter">The electronic Discharge Letter (eDL) mobile app</a></li><li>
+<a href="#lodstories">LODStories: Learning About Art by Building Multimedia Stories</a></li><li>
+<a href="#assess">ASSESS – Automatic Generation of Tests Using Linked Data</a></li><li>
+
 
      </div><!-- .block -->      
           <div id="agris" name="agris" class="block">
