--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
               <h1>Vidi Competition </h1>
 			  <br/>
 			  
+			  <h3><b>The call for submissions is now closed!</b></h3>
+			  
 			  <h3><ul><li>Submission deadline: 14 February 2014</li>
 <li>Notifications and nominations: 28 March 2014</li>
 <li>Presentations and award ceremony at ESWC 2014 (25-29 May 2014)</li></ul></h3>
