--- a/vidi.html
+++ b/vidi.html
@@ -82,7 +82,7 @@
       <div class="content-shifter">
         <div id="toptitle" name="top" class="block">
           <div class="titletext">
-		    <h1 class="title">Veni Competition</h1>
+		    <h1 class="title">Vidi Competition</h1>
 			<br />
 			<h1>Submissions</h1>
 			
