--- a/vidi.html
+++ b/vidi.html
@@ -72,8 +72,8 @@
                            <li><a href="http://linkedup-challenge.org/focused.html">Focused Tracks</a></li>
         		            <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
     
-              <li><b>Veni Competition</b></li>
-                 <li><a href="http://linkedup-challenge.org/veni.html#abstracts">Abstracts =></a></li>
+              <li><b>Vidi Submissions</b></li>
+                 <li><a href="http://linkedup-challenge.org/veni.html#abstracts">Veni Competition</a></li>
 
     
       </ul>
