--- a/vidi.html
+++ b/vidi.html
@@ -73,7 +73,7 @@
         		            <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
     
               <li><b>Vidi Submissions</b></li>
-                 <li><a href="http://linkedup-challenge.org/veni.html#abstracts">Veni Competition</a></li>
+                 <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
 
     
       </ul>
