--- a/vidi.html
+++ b/vidi.html
@@ -277,7 +277,7 @@ Rhizi.net early adopters include EdX, the Israeli Center for educational technol
 <b></h3>
 <p><h3><i>Pat Lockley</i></h3></p>
 <p><h3>Consultant (UK)</h3></p>
-<p><h3>Focused Track 2: Pathfinder</h3></p>
+<p><h3>Open Track</h3></p>
 <p><h3>Solvonauts is (we believe) the only open educational resource search engine which returns only CC or public domain licensed materials. We harvested from over 1,500 sites including repositories, flickr and tumblr. We are a fully working open source, open data, open pretty much everything open educational resource search engine.</h3></p>
 
 <h4 style="text-align:right"><em>Demo: <a href="http://solvonauts.org">http://solvonauts.org</a></em></h4>
