--- a/vidi.html
+++ b/vidi.html
@@ -107,23 +107,31 @@
           </div><!-- .block -->
          <div id="abstracts" name="abstracts" class="block">         
           <h2>Abstracts</h2>
-          
+                  <h3>Open Track</h3>
+  
 <ul><li><a href="#agris">AGRIS – exploiting bibliographic records to create rich Linked Open Data page</a></li><li>
 <a href="#assess">ASSESS – Automatic Generation of Tests Using Linked Data</a></li><li>
-<a href="#opencatalog">Cultural Heritage Open Catalog</a></li><li>
 <a href="#DBLPXplorer">DBLPXplorer: Interactive Graphical Interfaces for the Computer Science Bibliography</a></li><li>
-<a href="#elars">ELARS: E-Learning Activities Recommender System</a></li> <li>
-<a href="#letter">The electronic Discharge Letter (eDL) mobile app</a></li><li>
+<a href="#elars">ELARS: E-Learning Activities Recommender System</a></li> 
+<li>
 <a href="#konnektid">Konnektid - Social Learning Anytime, Anywhere</a></li><li>
 <a href="#lodstories">LODStories: Learning About Art by Building Multimedia Stories</a></li><li>
 <a href="#dictionary">NewDictionary</a></li><li>
-<a href="#sledgehammer">"OpenDataForge SledgeHammer" - An Open Data Enabling Tool</li> <li>
 <a href="#rhizi">Rhizi.net</a></li><li>
 <a href="#solvonauts">Solvonauts : an open educational search engine</a></li><li>
-<a href="#tuvalabs">TuvaLabs - Data Literacy Skills for a Brighter Future</a></li><li>
-<a href="#labour">Visualization of Labour Conflicts in the Netherlands for last 700 years</a></li>
+<a href="#tuvalabs">TuvaLabs - Data Literacy Skills for a Brighter Future</a></li>
 
 </ul>
+
+                  <h3> Focused Track: Simplificator </h3>
+
+<ul><li><a href="#opencatalog">Cultural Heritage Open Catalog</a></li><li>
+<a href="#sledgehammer">"OpenDataForge SledgeHammer" - An Open Data Enabling Tool</li> <li>
+<a href="#letter">The electronic Discharge Letter (eDL) mobile app</a></li><li>
+<a href="#labour">Visualization of Labour Conflicts in the Netherlands for last 700 years</a></li></ul>
+
+
+
 
 
      </div><!-- .block -->      
@@ -151,16 +159,6 @@
 
 </div>
 
-<div id="opencatalog" name="opencatalog" class="block">
-<h3><b>Cultural Heritage Open Catalog<b></h3>
-<p><h3><i>Francesco Di Tria</i></h3></p>
-<p><h3>Università degli Studi di Bari (Italy)</h3></p>
-<p><h3>Focused Track 1: Simplificator</h3></p>
-<p><h3>The project aims at presenting a search engine in the context of cultural heritage. The database is composed of  several datasets of the Italian Public Administration about archeological, historical, and tourist sites. User can insert key-words to obtain a set of items, which are sorted on the basis of a relevance degree. A detailed page of a given item shows a short description, along with its own reference on Google Map. The search engine is social-oriented, since it allows users to share reports and items with popular on-line communities. Future work is devoted to the development of a recommender system to suggest related items and itineraries using a user profile.</h3></p>
-
-<h4 style="text-align:right"><em>Demo: <a href="https://sourceforge.net/projects/codbeni/">https://sourceforge.net/projects/codbeni/</a></em></h4>
-
-</div>
 
 <div id="DBLPXplorer" name="DBLPXplorer" class="block">
 
@@ -188,18 +186,6 @@ One of the most important characteristics used for generating recommendations is
 <h4 style="text-align:right"><em>Demo: <a href="http://161.53.18.114/ElarsDemo">http://161.53.18.114/ElarsDemo</a></em></h4>
 </div>
 
-<div id="letter" name="letter" class="block">
-
-<h3><b>The electronic Discharge Letter (eDL) mobile app</b></h3>
-<p><h3><i>Leonardo Lezcano*, Michel Triana#, Bridget Maher+, Pat Henn+, Carola Orrego=, Lina Stieger^, Hanna
-Schroeder^, Susanne Druener^, Sasa Sopka^ and Marcus Specht*</i></h3></p>
-<p><h3>Open Track</h3></p>
-<p><h3>* Open University of the Netherlands (Netherlands), # JM Family Enterprises, Inc. (US), + University College, Cork (Ireland), = Universitat Autònoma de Barcelona (Spain), ^ University Hospital, Aachen, (Germany)</h3></p>
-<p><h3>Discharge letters are important issues to consider when ensuring patient safety as they represent the transfer of patient care from one care-giver to another in a time of particular risk for medical errors. Nowadays, paper based letters, unstructured texts, unstandardized diagnosis, language barriers, incompleteness and ambiguity make discharge letters a breakpoint in the clinical information workflow that must be addressed. This paper presents the "Electronic Discharge Letter (eDL) mobile app" as a revolutionary approach to transfer eDLs and prevent the above-mentioned complications. A seamless exchange between doctors, specialists and patients is technically supported by the app through the Near Field Communication standards. To achieve semantic interoperability, the eDL app combines the CLAS scale for discharge letters with nine clinical terminologies and linked data sources. It encourages the adoption of a handover standard and the integration with healthcare systems. In addition, the eDL app contributes to patient empowerment by offering multilingual definitions and translations of clinical concepts from terminology/ontology mappings rather than text-based searches. It automatically raises allergy alerts based on current prescriptions and previous diagnosis, all of which will ultimately improve the continuity of care, and simplify doctors' workflow and patient decisions. The app potential for mobile learning in healthcare settings should be also considered. </h3></p>
-
-<h4 style="text-align:right"><em>Demo video: <a href="http://youtu.be/bAT0JKPPZu4">http://youtu.be/bAT0JKPPZu4</a></em></h4>
-
-</div>
 
 
 
@@ -243,18 +229,7 @@ People everywhere are walking around with useful skills and knowledge. Unfortuna
 <div id="sledgehammer" name="sledgehammer" class="block">
 
 
-<h3><b>"OpenDataForge SledgeHammer" - An Open Data Enabling Tool</b></h3>
-<p><h3><i>Abdul Rahim and Pascal Heus</i></h3></p>
-<p><h3>Metadata Technology North America, Inc. (US)</h3></p>
-<p><h3>Focused Track 1: Simplificator</h3></p>
-<p><h3>Turn your data into open data (and back)! SledgeHammer is a powerful tool that facilitates the production of open data packages for publication or preservation purposes, and for discovery, access and reuse by data management, analysis software or database engines. SledgeHammer enables the exchange of data  between proprietary and open formats, by leveraging industry standard technologies and globally recognized metadata standards.</h3></p><p><h3>
-SledgeHammer is a component of OpenDataForge, a collection of desktop and cloud based solutions developed by Metadata Technology North America (MTNA) to address practical user needs around data management and to foster the adoption of globally recognized metadata standards. 
-</h3></p>
 
-<h4 style="text-align:right"><em>Demo: <a href="http://www.openmetadata.org/sledgehammer">http://www.openmetadata.org/sledgehammer</a></em></h4>
-
-</div>
-          
 
 <div id="rhizi" name="rhizi" class="block">
 
@@ -299,6 +274,45 @@ TuvaLabs transforms open data into opportunities for meaningful teaching and lea
 <h4 style="text-align:right"><em>Demo: <a href="https://www.tuvalabs.com">https://www.tuvalabs.com</a></em></h4>
 
 </div>
+
+<h2> Focused Track: Simplificator</h2>
+<div id="opencatalog" name="opencatalog" class="block">
+<h3><b>Cultural Heritage Open Catalog<b></h3>
+<p><h3><i>Francesco Di Tria</i></h3></p>
+<p><h3>Università degli Studi di Bari (Italy)</h3></p>
+<p><h3>Focused Track: Simplificator</h3></p>
+<p><h3>The project aims at presenting a search engine in the context of cultural heritage. The database is composed of  several datasets of the Italian Public Administration about archeological, historical, and tourist sites. User can insert key-words to obtain a set of items, which are sorted on the basis of a relevance degree. A detailed page of a given item shows a short description, along with its own reference on Google Map. The search engine is social-oriented, since it allows users to share reports and items with popular on-line communities. Future work is devoted to the development of a recommender system to suggest related items and itineraries using a user profile.</h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="https://sourceforge.net/projects/codbeni/">https://sourceforge.net/projects/codbeni/</a></em></h4>
+
+</div>
+
+<div id="letter" name="letter" class="block">
+
+<h3><b>The electronic Discharge Letter (eDL) mobile app</b></h3>
+<p><h3><i>Leonardo Lezcano*, Michel Triana#, Bridget Maher+, Pat Henn+, Carola Orrego=, Lina Stieger^, Hanna
+Schroeder^, Susanne Druener^, Sasa Sopka^ and Marcus Specht*</i></h3></p>
+<p><h3>Focused Track: Simplificator</h3></p>
+<p><h3>* Open University of the Netherlands (Netherlands), # JM Family Enterprises, Inc. (US), + University College, Cork (Ireland), = Universitat Autònoma de Barcelona (Spain), ^ University Hospital, Aachen, (Germany)</h3></p>
+<p><h3>Discharge letters are important issues to consider when ensuring patient safety as they represent the transfer of patient care from one care-giver to another in a time of particular risk for medical errors. Nowadays, paper based letters, unstructured texts, unstandardized diagnosis, language barriers, incompleteness and ambiguity make discharge letters a breakpoint in the clinical information workflow that must be addressed. This paper presents the "Electronic Discharge Letter (eDL) mobile app" as a revolutionary approach to transfer eDLs and prevent the above-mentioned complications. A seamless exchange between doctors, specialists and patients is technically supported by the app through the Near Field Communication standards. To achieve semantic interoperability, the eDL app combines the CLAS scale for discharge letters with nine clinical terminologies and linked data sources. It encourages the adoption of a handover standard and the integration with healthcare systems. In addition, the eDL app contributes to patient empowerment by offering multilingual definitions and translations of clinical concepts from terminology/ontology mappings rather than text-based searches. It automatically raises allergy alerts based on current prescriptions and previous diagnosis, all of which will ultimately improve the continuity of care, and simplify doctors' workflow and patient decisions. The app potential for mobile learning in healthcare settings should be also considered. </h3></p>
+
+<h4 style="text-align:right"><em>Demo video: <a href="http://youtu.be/bAT0JKPPZu4">http://youtu.be/bAT0JKPPZu4</a></em></h4>
+
+</div>
+
+
+<h3><b>"OpenDataForge SledgeHammer" - An Open Data Enabling Tool</b></h3>
+<p><h3><i>Abdul Rahim and Pascal Heus</i></h3></p>
+<p><h3>Metadata Technology North America, Inc. (US)</h3></p>
+<p><h3>Focused Track: Simplificator</h3></p>
+<p><h3>Turn your data into open data (and back)! SledgeHammer is a powerful tool that facilitates the production of open data packages for publication or preservation purposes, and for discovery, access and reuse by data management, analysis software or database engines. SledgeHammer enables the exchange of data  between proprietary and open formats, by leveraging industry standard technologies and globally recognized metadata standards.</h3></p><p><h3>
+SledgeHammer is a component of OpenDataForge, a collection of desktop and cloud based solutions developed by Metadata Technology North America (MTNA) to address practical user needs around data management and to foster the adoption of globally recognized metadata standards. 
+</h3></p>
+
+<h4 style="text-align:right"><em>Demo: <a href="http://www.openmetadata.org/sledgehammer">http://www.openmetadata.org/sledgehammer</a></em></h4>
+
+</div>
+
 <div id="labour" name="labour" class="block">
 
  
@@ -311,6 +325,9 @@ TuvaLabs transforms open data into opportunities for meaningful teaching and lea
 
 <h4 style="text-align:right"><em>Demo: <a href="http://bio-demo.ontotext.com/bio2/">http://bio-demo.ontotext.com/bio2</a></em></h4>
 </div>
+
+
+
 
 
 
@@ -343,6 +360,7 @@ TuvaLabs transforms open data into opportunities for meaningful teaching and lea
   </div><!-- #wrapper -->
 </body>
 </html>
+
 
 
 
