--- a/vidi.html
+++ b/vidi.html
@@ -100,7 +100,7 @@
         <div id="what" name="what" class="block">
             <p><h3>The Vidi Competition ran between late November 2013 and February 2014. People were invited to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes.</h3><br />
 <h3>We received 14 valid entries. The abstracts are given below. </h3><br />
-<h3>All entries are now being reviewed by the evaluation committee, led by the <a href=”http://linkedup-challenge.org/#reviewpanel”>LinkedUp advisory board</a>. The advisory board will create a shortlist by 28 March 2014. Those shortlisted will be invited to <a href=”http://2014.eswc-conferences.org/”>ESWC</a> in Crete to take part in the <a href=”http://linkedup-project.eu/linkedup-eswc-workshop/”>LinkedUp Award Ceremony on 26 May prizes will be awarded. 
+<h3>All entries are now being reviewed by the evaluation committee, led by the <a href=”http://linkedup-challenge.org/#reviewpanel”>LinkedUp advisory board</a>. The advisory board will create a shortlist by 28 March 2014. Those shortlisted will be invited to <a href=”http://2014.eswc-conferences.org/”>ESWC</a> in Crete to take part in the <a href=”http://linkedup-project.eu/linkedup-eswc-workshop/”>LinkedUp Award Ceremony on 26 May where prizes will be awarded. 
 </h3>
             <br/><br/>
 			 
@@ -122,7 +122,7 @@
 <a href="#tuvalabs">TuvaLabs - Data Literacy Skills for a Brighter Future</a></li>
 
 </ul>
-
+<br />
                   <h3>Focused Track: Simplificator </h3>
 
 <ul><li><a href="#opencatalog">Cultural Heritage Open Catalog</a></li><li>
