--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <li><a href="#contact"><i>Get in touch!</i></a></li>
         <li><a href="focused.html">Focused Tracks</a></li>
         <li><a href="usecases-vidi.html">Use Cases</a></li>
+                <li><a href="vidi.html">Vidi Submissions</a></li>
         <li><a href="veni.html">Veni Competition</a></li>
               <li><a href="http://linkedup-project.eu">LinkedUp Project</a></li>
 
