--- a/focused.html
+++ b/focused.html
@@ -75,6 +75,7 @@
         <li><a href="#simplificator"><i>Simplificator</i></a></li>
       <li><a href="#pathfinder"><i>Pathfinder</i></a></li>
   <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
+          <li><a href="vidi.html">Vidi Submissions</a></li>
 		                         <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
         <li><a href="http://linkedup-project.eu">LinkedUp Project</a></li> </ul>
 	</div>
