--- a/veni.html
+++ b/veni.html
@@ -71,7 +71,7 @@
                          <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>
                            <li><a href="http://linkedup-challenge.org/focused.html">Focused Tracks</a></li>
         		            <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
-    
+              <li><a href="vidi.html">Vidi Submissions</a></li>
               <li><b>Veni Competition</b></li>
                  <li><a href="http://linkedup-challenge.org/veni.html#abstracts">Abstracts =></a></li>
 
