--- a/vidi.html
+++ b/vidi.html
@@ -325,7 +325,7 @@ SledgeHammer is a component of OpenDataForge, a collection of desktop and cloud 
 <p><h3>Focused Track 1: Simplificator</h3></p>
 <p><h3>The visualisation interface for the Strikes case study provides a visual interface to the process undertaken in HiTiME and ISHER projects for discovering articles related to strike events in the KB archive and linking these to strike entity events, as these are defined and described in the Strikes DB. The overall objective of the visualisation interface for the Strikes case study is the provision of a visual overview of linked and associated data from primary and secondary historical resources, such as the Strikes DB and the KB archive. This data overview is intended to support historians in retrieving information and in spotting significant data trends across time and space that may lead to new insights about historical facts and events that were thus far scattered along various sources.</h3></p>
 
-<h4 style="text-align:right"><em>Demo: <a href="http://bio-demo.ontotext.com/bio2/">http://bio-demo.ontotext.com/bio2</a></em></h4>
+<h4 style="text-align:right"><em>Demo: <a href="http://node-195.dev.socialhistoryservices.org/strikes/"http://node-195.dev.socialhistoryservices.org/strikes/</a></em></h4>
 </div>
 
 
