--- a/vidi.html
+++ b/vidi.html
@@ -285,7 +285,7 @@ TuvaLabs transforms open data into opportunities for meaningful teaching and lea
 <p><h3>Focused Track: Simplificator</h3></p>
 <p><h3>The project aims at presenting a search engine in the context of cultural heritage. The database is composed of  several datasets of the Italian Public Administration about archeological, historical, and tourist sites. User can insert key-words to obtain a set of items, which are sorted on the basis of a relevance degree. A detailed page of a given item shows a short description, along with its own reference on Google Map. The search engine is social-oriented, since it allows users to share reports and items with popular on-line communities. Future work is devoted to the development of a recommender system to suggest related items and itineraries using a user profile.</h3></p>
 
-<h4 style="text-align:right"><em>Demo: <a href="https://sourceforge.net/projects/codbeni/">https://sourceforge.net/projects/codbeni/</a></em></h4>
+<h4 style="text-align:right"><em>Demo: <a href="http://codbeni.altervista.org/">http://codbeni.altervista.org/</a></em></h4>
 
 </div>
 
